@@ -249,6 +249,10 @@ cell_assign_EM <- function(A, D, Config, Psi=NULL, model="binomial",
 #' distribution on the inferred false positive rate.
 #' @param prior1 numeric(2), alpha and beta parameters for the Beta prior
 #' distribution on the inferred (1 - false negative) rate.
+#' @param relax_Config numeric(1), relaxing the Clone Configuration by changing
+#' it from fixed value to prior. The prior probability will be relax_Config and
+#' (1 - relax_Config) respectively for values 0 and 1 in original Config matrix.
+#' If it is relax_Config=NULL or <0 or >1, this utility will turned off.
 #' @param Bernoulli_threshold An integer. The count threshold of alteration
 #' reads when using Bernoulli model.
 #' @param wise A string, the wise of parameters for theta1: global, variant,
@@ -264,7 +268,8 @@ cell_assign_EM <- function(A, D, Config, Psi=NULL, model="binomial",
 #' assignments_bern <- cell_assign_Gibbs(A_clone, D_clone, Config = tree$Z, model = "Bernoulli")
 #'
 cell_assign_Gibbs <- function(A, D, Config, Psi=NULL, A_germ=NULL, D_germ=NULL,
-                              prior0 = c(0.3, 29.7), prior1 = c(2.25, 2.65),
+                              relax_Config=NULL,
+                              prior0 = c(0.2, 99.8), prior1 = c(0.45, 0.55),
                               model="binomial", Bernoulli_threshold=1,
                               min_iter=1000, max_iter=10000, wise="variant",
                               verbose=TRUE) {
@@ -361,6 +366,15 @@ cell_assign_Gibbs <- function(A, D, Config, Psi=NULL, A_germ=NULL, D_germ=NULL,
     assign_all <- matrix(0, nrow = max_iter, ncol = M)
     theta0_all <- matrix(0, nrow = max_iter, ncol = 1)
     theta1_all <- matrix(0, nrow = max_iter, ncol = n_element)
+    Config_all <- matrix(0, nrow = max_iter, ncol = N*K)
+    if (!is.null(relax_Config) && relax_Config > 0 && relax_Config < 1) {
+        Config_prior <- Config
+        Config_prior[Config == 1] <- 1 - relax_Config
+        Config_prior[Config == 0] <- relax_Config
+        Config_prior[, 1] <- Config[, 1] ## Keep the base clone
+        Config_prior_oddlog <- log(Config_prior) - log(1-Config_prior)
+        Iden_mat <- matrix(0, nrow = M, ncol = K)
+    }
 
     ## Random initialization
     theta0_all[1,1] <- stats::rbeta(1, prior0[1], prior0[2])
@@ -394,6 +408,34 @@ cell_assign_Gibbs <- function(A, D, Config, Psi=NULL, A_germ=NULL, D_germ=NULL,
         for (j in seq_len(M)) {
             assign_all[it,j] <- sample(seq_len(K), 1, replace = TRUE,
                                        prob = prob_mat[j,])
+        }
+
+        ## Update Config
+        if (it > (0.1 * min_iter) && !is.null(relax_Config) && 
+            relax_Config > 0 && relax_Config < 1) {
+            Iden_mat[,] <- 0
+            for (j in seq_len(M)) {
+                Iden_mat[j, assign_all[it,j]] <- 1 }
+
+            # calculate log_probability matrix with genotype 0 and 1
+            P0_mat <- A1 * log(theta0) + B1 * log(1 - theta0) + W_log
+            P1_mat <- A1 * log(theta1) + B1 * log(1 - theta1) + W_log
+            
+            oddR_log <- P1_mat %*% Iden_mat - P0_mat %*% Iden_mat
+            oddR_log <- oddR_log + Config_prior_oddlog
+            oddR_log[which(oddR_log > 50)] <- 50
+            oddR_log[which(oddR_log < -50)] <- -50
+            Conf_prob <- exp(oddR_log) / (exp(oddR_log) + 1)
+            
+            Config <- matrix(stats::rbinom(N*K, size = 1, Conf_prob), nrow = N)
+            Config_all[it, ] <- Config
+
+            for (k in seq_len(K)) {
+                S1_list[[k]] <- A1 * (1 - Config[,k])
+                S2_list[[k]] <- B1 * (1 - Config[,k])
+                S3_list[[k]] <- A1 * Config[,k] + A2
+                S4_list[[k]] <- B1 * Config[,k] + B2
+            }
         }
 
         # Sample theta with assigned clones
@@ -462,7 +504,8 @@ cell_assign_Gibbs <- function(A, D, Config, Psi=NULL, A_germ=NULL, D_germ=NULL,
                         "theta1_all" = as.matrix(theta1_all[1:it,]),
                         "element" = idx_mat, "logLik" = logLik_all[1:it],
                         "prob_all" = prob_all[1:it,],
-                        "prob" = prob_mat, "prob_variant" = prob_variant)
+                        "prob" = prob_mat, "prob_variant" = prob_variant,
+                        "Config_all"=Config_all[1:it,])
     return_list
 }
 
